[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/level1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Node2D.gd" type="Script" id=2]
[ext_resource path="res://Assets/tileSet2.png" type="Texture" id=3]
[ext_resource path="res://Assets/tiles2.res" type="TileSet" id=4]
[ext_resource path="res://Scripts/Snake1.gd" type="Script" id=5]
[ext_resource path="res://Assets/snake1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/EnemyCollisionCheck.gd" type="Script" id=7]
[ext_resource path="res://Assets/smokeScreen.png" type="Texture" id=8]
[ext_resource path="res://Scenes/visionBlocker.gd" type="Script" id=9]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=10]
[ext_resource path="res://Assets/bird1.png" type="Texture" id=11]
[ext_resource path="res://Assets/lazer.png" type="Texture" id=12]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 11.0
height = 5.0

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 5.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 16.0

[node name="level" type="Node" index="0"]

script = ExtResource( 1 )
finishX = 3000
winner = "snake wins"

[node name="cameraControl" type="Node2D" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
furthestX = 0
winningSnake = "test"

[node name="Camera2D" type="Camera2D" parent="cameraControl" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.2
drag_margin_right = 0.0
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="Area2D" type="Area2D" parent="cameraControl" index="1"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="cameraControl/Area2D" index="0"]

build_mode = 1
polygon = PoolVector2Array( -508, -296, -508, 296, 508, 296, 508, -296 )

[node name="TopArea" type="Area2D" parent="cameraControl" index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/TopArea" index="0"]

build_mode = 0
polygon = PoolVector2Array( 512, -300, 536, -320, -528, -320, -512, -304 )

[node name="BotArea" type="Area2D" parent="cameraControl" index="3"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/BotArea" index="0"]

rotation = 3.14159
build_mode = 0
polygon = PoolVector2Array( 510, -300, 534, -320, -532, -320, -512, -300 )
_sections_unfolded = [ "Transform" ]

[node name="RightArea" type="Area2D" parent="cameraControl" index="4"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/RightArea" index="0"]

build_mode = 0
polygon = PoolVector2Array( 512, -296, 764, -516, 762, 560, 512, 296 )

[node name="LeftArea" type="Area2D" parent="cameraControl" index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="cameraControl/LeftArea" index="0"]

rotation = 3.14159
build_mode = 0
polygon = PoolVector2Array( 512, -300, 812.001, -543.998, 809.999, 524.002, 512, 300 )
_sections_unfolded = [ "Transform" ]

[node name="Fire1" type="Sprite" parent="cameraControl" index="6"]

position = Vector2( -2359.5, 4 )
scale = Vector2( 5.875, 19.5 )
z_index = 4
texture = ExtResource( 3 )
offset = Vector2( 500, 0 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]

[node name="Fire2" type="Sprite" parent="cameraControl" index="7"]

position = Vector2( 1270.5, 4.00002 )
scale = Vector2( 3.625, 19.25 )
z_index = 4
texture = ExtResource( 3 )
offset = Vector2( -500, 0 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]

[node name="Fire3" type="Sprite" parent="cameraControl" index="8"]

position = Vector2( 35, 994 )
scale = Vector2( 38.9375, 4.5 )
z_index = 5
texture = ExtResource( 3 )
offset = Vector2( 0, -300 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Z Index" ]

[node name="Fire4" type="Sprite" parent="cameraControl" index="9"]

position = Vector2( 34, -745.5 )
scale = Vector2( 39, 3.625 )
z_index = 5
texture = ExtResource( 3 )
offset = Vector2( 0, 300 )
region_enabled = true
region_rect = Rect2( 341, 1, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Z Index" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -786427, 5, 0, -786426, 5, 0, -786425, 5, 0, -786424, 5, 0, -589834, 5, 0, -589833, 5, 0, -589832, 5, 0, -589831, 5, 0, -589830, 5, 0, -589829, 5, 0, -589828, 5, 0, -589827, 5, 0, -589826, 5, 0, -589825, 5, 0, -655360, 5, 0, -655359, 5, 0, -655358, 5, 0, -655357, 5, 0, -655356, 5, 0, -655355, 5, 0, -655354, 5, 0, -655353, 5, 0, -655352, 5, 0, -655351, 5, 0, -655350, 5, 0, -655349, 5, 0, -655348, 5, 0, -655347, 5, 0, -655346, 5, 0, -655345, 5, 0, -655344, 5, 0, -655343, 5, 0, -655342, 5, 0, -655332, 4, 0, -655331, 4, 0, -655330, 4, 0, -655329, 4, 0, -655328, 4, 0, -655327, 4, 0, -655326, 4, 0, -655325, 4, 0, -655324, 4, 0, -655323, 4, 0, -655322, 4, 0, -655321, 4, 0, -655320, 4, 0, -655319, 4, 0, -655318, 4, 0, -655317, 4, 0, -655316, 4, 0, -655315, 4, 0, -655314, 4, 0, -655313, 4, 0, -655312, 4, 0, -655311, 4, 0, -655310, 4, 0, -655309, 4, 0, -655308, 4, 0, -655307, 4, 0, -655306, 4, 0, -655305, 4, 0, -655304, 4, 0, -655303, 4, 0, -655302, 4, 0, -655301, 4, 0, -655300, 4, 0, -655299, 4, 0, -655298, 4, 0, -655297, 4, 0, -655296, 4, 0, -655295, 4, 0, -655294, 4, 0, -655293, 4, 0, -655292, 4, 0, -655291, 4, 0, -655290, 4, 0, -655289, 4, 0, -655288, 4, 0, -655287, 4, 0, -655286, 4, 0, -655285, 4, 0, -655284, 4, 0, -655283, 4, 0, -655282, 4, 0, -655281, 4, 0, -655280, 4, 0, -655279, 4, 0, -655278, 4, 0, -655277, 4, 0, -655276, 4, 0, -655275, 4, 0, -655274, 4, 0, -655273, 4, 0, -655272, 4, 0, -655271, 4, 0, -655270, 4, 0, -655269, 4, 0, -655268, 4, 0, -655267, 4, 0, -589803, 5, 0, -589802, 5, 0, -589801, 5, 0, -589800, 5, 0, -589799, 5, 0, -589798, 5, 0, -589797, 5, 0, -589796, 5, 0, -589795, 5, 0, -589794, 5, 0, -589793, 5, 0, -589792, 5, 0, -589791, 5, 0, -589790, 5, 0, -589789, 5, 0, -589764, 5, 0, -589763, 5, 0, -589762, 5, 0, -589761, 5, 0, -589760, 5, 0, -589759, 5, 0, -589758, 5, 0, -589757, 5, 0, -589756, 5, 0, -589755, 5, 0, -589754, 5, 0, -589753, 5, 0, -589752, 5, 0, -589751, 5, 0, -589750, 5, 0, -589749, 5, 0, -589748, 5, 0, -589747, 5, 0, -589746, 5, 0, -589745, 5, 0, -589744, 5, 0, -589743, 5, 0, -589742, 5, 0, -589741, 5, 0, -589740, 5, 0, -589739, 5, 0, -589738, 5, 0, -589737, 5, 0, -589736, 5, 0, -589735, 5, 0, -589734, 5, 0, -589733, 5, 0, -589732, 5, 0, -589731, 5, 0, -524224, 5, 0, -524195, 3, 0, -458727, 1, 0, -458726, 0, 0, -458725, 0, 0, -458724, 0, 0, -458723, 0, 0, -458722, 0, 0, -458721, 0, 0, -458720, 2, 0, -458688, 5, 0, -458659, 3, 0, -393155, 5, 0, -393154, 5, 0, -393152, 5, 0, -393132, 5, 0, -393123, 3, 0, -327657, 0, 0, -327640, 1, 0, -327639, 2, 0, -327628, 1, 0, -327627, 2, 0, -327619, 5, 0, -327618, 5, 0, -327616, 5, 0, -327615, 5, 0, -327614, 5, 0, -327613, 5, 0, -327605, 5, 0, -327604, 5, 0, -327596, 5, 0, -327587, 3, 0, -262128, 1, 0, -262127, 2, 0, -262121, 5, 0, -262083, 5, 0, -262082, 5, 0, -262080, 5, 0, -262079, 5, 0, -262078, 5, 0, -262077, 5, 0, -262076, 5, 0, -262075, 5, 0, -262074, 5, 0, -262073, 5, 0, -262072, 5, 0, -262069, 5, 0, -262068, 5, 0, -262060, 5, 0, -262051, 3, 0, -196585, 5, 0, -196562, 1, 0, -196561, 2, 0, -196547, 5, 0, -196546, 5, 0, -196533, 5, 0, -196532, 5, 0, -196531, 5, 0, -196530, 5, 0, -196529, 5, 0, -196524, 5, 0, -196515, 3, 0, -131049, 5, 0, -131043, 1, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 2, 0, -131011, 5, 0, -131010, 5, 0, -131009, 5, 0, -131008, 5, 0, -131007, 5, 0, -131006, 5, 0, -131005, 5, 0, -130997, 5, 0, -130988, 5, 0, -130979, 3, 0, -65475, 5, 0, -65474, 5, 0, -65473, 5, 0, -65472, 5, 0, -65471, 5, 0, -65470, 5, 0, -65469, 5, 0, -65461, 5, 0, -65452, 5, 0, -65443, 3, 0, 61, 5, 0, 62, 5, 0, 63, 5, 0, 64, 5, 0, 65, 5, 0, 66, 5, 0, 67, 5, 0, 71, 1, 0, 72, 0, 0, 73, 0, 0, 74, 0, 0, 75, 5, 0, 82, 5, 0, 83, 5, 0, 84, 5, 0, 93, 3, 0, 65552, 1, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 2, 0, 65568, 0, 0, 65584, 1, 0, 65585, 0, 0, 65586, 0, 0, 65587, 0, 0, 65588, 0, 0, 65589, 0, 0, 65590, 2, 0, 65620, 5, 0, 65629, 3, 0, 196606, 1, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 2, 0, 131104, 5, 0, 131156, 5, 0, 131165, 3, 0, 196622, 1, 0, 196623, 2, 0, 196638, 1, 0, 196639, 0, 0, 196640, 0, 0, 196641, 2, 0, 196692, 5, 0, 196701, 3, 0, 262202, 1, 0, 262203, 0, 0, 262204, 0, 0, 262205, 0, 0, 262206, 0, 0, 262207, 0, 0, 262208, 0, 0, 262209, 0, 0, 262210, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 2, 0, 262218, 5, 0, 262219, 5, 0, 262220, 5, 0, 262221, 5, 0, 262222, 5, 0, 262223, 5, 0, 262224, 5, 0, 262225, 5, 0, 262226, 5, 0, 262227, 5, 0, 262228, 5, 0, 262229, 5, 0, 262230, 5, 0, 262231, 5, 0, 262232, 5, 0, 262237, 3, 0, 327687, 1, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 2, 0, 327707, 1, 0, 327708, 2, 0, 327754, 5, 0, 327773, 3, 0, 393257, 1, 0, 393258, 0, 0, 393259, 0, 0, 393260, 0, 0, 393261, 0, 0, 393262, 2, 0, 393309, 3, 0, 458845, 3, 0, 589811, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524301, 1, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 2, 0, 524311, 1, 0, 524312, 0, 0, 524313, 2, 0, 524349, 1, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 524358, 0, 0, 524359, 0, 0, 524360, 2, 0, 524365, 1, 0, 524366, 2, 0, 524374, 1, 0, 524375, 2, 0, 524381, 3, 0, 589848, 4, 0, 589849, 4, 0, 589850, 4, 0, 589851, 4, 0, 589852, 4, 0, 589853, 4, 0, 589854, 4, 0, 589855, 4, 0, 589856, 4, 0, 589857, 4, 0, 589858, 4, 0, 589859, 4, 0, 589860, 4, 0, 589861, 4, 0, 589862, 4, 0, 589863, 4, 0, 589864, 4, 0, 589865, 4, 0, 589866, 4, 0, 589867, 4, 0, 589868, 4, 0, 589869, 4, 0, 589870, 4, 0, 589871, 4, 0, 589872, 4, 0, 589873, 4, 0, 589874, 4, 0, 589875, 4, 0, 589876, 4, 0, 589877, 4, 0, 589878, 4, 0, 589879, 4, 0, 589880, 4, 0, 589881, 4, 0, 589882, 4, 0, 589883, 4, 0, 589884, 4, 0, 589885, 4, 0, 589886, 4, 0, 589887, 4, 0, 589888, 4, 0, 589889, 4, 0, 589890, 4, 0, 589891, 4, 0, 589892, 4, 0, 589893, 4, 0, 589894, 4, 0, 589895, 4, 0, 589896, 4, 0, 589897, 4, 0, 589898, 4, 0, 589899, 4, 0, 589900, 4, 0, 589901, 4, 0, 589902, 4, 0, 589903, 4, 0, 589904, 4, 0, 589905, 4, 0, 589906, 4, 0, 589907, 4, 0, 589908, 4, 0, 589909, 4, 0, 589910, 4, 0, 589911, 4, 0, 589912, 4, 0, 589913, 4, 0, 589914, 4, 0, 589915, 4, 0, 589916, 4, 0, 589917, 4, 0 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Snake1" type="KinematicBody2D" parent="." index="2" groups=[
"snakes",
]]

light_mask = 4
input_pickable = false
collision_layer = 4
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
leftInput = "snake_1_move_left"
rightInput = "snake_1_move_right"
upInput = "snake_1_move_up"
numAirJumps = 1

[node name="Sprite" type="Sprite" parent="Snake1" index="0"]

z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake1" index="1"]

modulate = Color( 0.174957, 0.246142, 0.710938, 1 )
self_modulate = Color( 0.121185, 0.539404, 0.816406, 1 )
position = Vector2( -3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyCollisionCheck" type="Area2D" parent="Snake1" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 25
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake1/EnemyCollisionCheck" index="0"]

position = Vector2( -3, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Snake2" type="KinematicBody2D" parent="." index="3" groups=[
"snakes",
]]

light_mask = 4
position = Vector2( -64, 0 )
input_pickable = false
collision_layer = 4
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform" ]
leftInput = "snake_2_move_left"
rightInput = "snake_2_move_right"
upInput = "snake_2_move_up"
numAirJumps = 1

[node name="Sprite" type="Sprite" parent="Snake2" index="0"]

z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 32, 0, 32, 32 )
_sections_unfolded = [ "Region", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake2" index="1"]

modulate = Color( 0.174957, 0.246142, 0.710938, 1 )
self_modulate = Color( 0.121185, 0.539404, 0.816406, 1 )
position = Vector2( -3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyCollisionCheck" type="Area2D" parent="Snake2" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 25
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake2/EnemyCollisionCheck" index="0"]

position = Vector2( -3, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Snake3" type="KinematicBody2D" parent="." index="4" groups=[
"snakes",
]]

light_mask = 4
position = Vector2( 0, -64 )
input_pickable = false
collision_layer = 4
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
leftInput = "snake_3_move_left"
rightInput = "snake_3_move_right"
upInput = "snake_3_move_up"
numAirJumps = 1

[node name="Sprite" type="Sprite" parent="Snake3" index="0"]

z_index = 1
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 0, 32, 32 )
_sections_unfolded = [ "Region", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake3" index="1"]

modulate = Color( 0.174957, 0.246142, 0.710938, 1 )
self_modulate = Color( 0.121185, 0.539404, 0.816406, 1 )
position = Vector2( -3, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyCollisionCheck" type="Area2D" parent="Snake3" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 25
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snake3/EnemyCollisionCheck" index="0"]

position = Vector2( -3, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="smokeScreen" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 199, -27 )
scale = Vector2( 2.5, 2.5 )
z_index = 2
texture = ExtResource( 8 )
region_rect = Rect2( 341, 1, 32, 32 )
script = ExtResource( 9 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Bird1" type="KinematicBody2D" parent="." index="6"]

light_mask = 4
position = Vector2( 199, -27 )
input_pickable = false
collision_layer = 8
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 10 )
_sections_unfolded = [ "Collision", "Visibility", "collision" ]

[node name="Sprite" type="Sprite" parent="Bird1" index="0"]

light_mask = 4
rotation = 1.5708
z_index = 3
texture = ExtResource( 11 )
offset = Vector2( -1, -2 )
_sections_unfolded = [ "Animation", "Offset", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird1" index="1"]

shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Bird1" index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bird1/Area2D" index="0"]

shape = SubResource( 3 )

[node name="laser" type="Sprite" parent="." index="7"]

editor/display_folded = true
position = Vector2( 0, -500 )
scale = Vector2( 1, 16 )
texture = ExtResource( 12 )
offset = Vector2( 0, -17 )
region_enabled = true
region_rect = Rect2( 35, 1, 32, 32 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Area2D" type="Area2D" parent="laser" index="0"]

visible = false
position = Vector2( 0, -1 )
scale = Vector2( 1, 0.0666667 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="laser/Area2D" index="0"]

build_mode = 0
polygon = PoolVector2Array( 16, 0, 16, -480, -16, -480, -16, 0 )

[node name="prelaser" type="Sprite" parent="." index="8"]

position = Vector2( 0, -500 )
scale = Vector2( 1, 16 )
texture = ExtResource( 12 )
offset = Vector2( 0, -17 )
region_enabled = true
region_rect = Rect2( 1, 1, 32, 32 )
_sections_unfolded = [ "Region", "Transform", "Z Index" ]

[connection signal="area_entered" from="cameraControl/TopArea" to="Bird1" method="_on_TopArea_area_entered"]

[connection signal="area_entered" from="cameraControl/BotArea" to="Bird1" method="_on_BotArea_area_entered"]

[connection signal="area_entered" from="cameraControl/RightArea" to="Bird1" method="_on_RightArea_area_entered"]

[connection signal="area_entered" from="cameraControl/LeftArea" to="Bird1" method="_on_LeftArea_area_entered"]

[connection signal="area_entered" from="Snake1/EnemyCollisionCheck" to="Snake1" method="_on_EnemyCollisionCheck_area_entered"]

[connection signal="area_entered" from="Snake2/EnemyCollisionCheck" to="Snake2" method="_on_EnemyCollisionCheck_area_entered"]

[connection signal="area_entered" from="Snake3/EnemyCollisionCheck" to="Snake3" method="_on_EnemyCollisionCheck_area_entered"]

[connection signal="visionBlock" from="Bird1" to="smokeScreen" method="_on_Bird1_visionBlock"]


